--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^3.11.0",
+    "react-query": "^3.23.1",
     "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "server":"json-server --watch db.json --port 3002 --deelay 3000 ",
+    "server": "json-server --watch db.json --port 3002 --deelay 3000 ",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
